fixed alignment of blogpost content on homepage

--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,8 @@ body {
     display: flex;
     justify-content: space-between;
     z-index: 9;
-    align-items: center; }
+    align-items: center;
+    position: relative; }
     .hero_container header .logo {
       margin: 10px 15px; }
       .hero_container header .logo_img {
@@ -951,12 +952,17 @@ body {
     #hero .left_herosection {
       display: none; }
   .blogposts_container .blog_posts {
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    gap: 15px;
+    margin-left: 10px;
+    margin-right: 10px; }
     .blogposts_container .blog_posts .post_item {
       width: 95%;
       height: 350px; }
       .blogposts_container .blog_posts .post_item .blog_content {
         padding: 4px; }
+        .blogposts_container .blog_posts .post_item .blog_content p {
+          font-size: .9rem; }
   .about {
     z-index: 99999999999999; }
     .about .about_me {
@@ -1046,7 +1052,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px; }
+    margin: 20px 0px; }
     .blogposts_container .blog_posts .post_item {
       width: 82%;
       height: 300px;
@@ -1108,13 +1114,9 @@ body {
     width: 100%;
     padding: 10px 40px;
     height: 900px; }
-  .blogposts_container .blog_posts {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
-    .blogposts_container .blog_posts .post_item {
-      width: 82%;
-      height: 350px; }
+  .blogposts_container .blog_posts .post_item {
+    width: 82%;
+    height: 350px; }
   .contact_container form input {
     width: 55%; }
   .contact_container form textarea {
@@ -1202,23 +1204,19 @@ body {
         width: 85%; }
     .works .works_carouselcontainer .swiper-button-next:after, .works .works_carouselcontainer .swiper-button-prev:after {
       font-size: 1.7rem !important; }
-  .blogposts_container .blog_posts {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
-    .blogposts_container .blog_posts .post_item {
-      width: 95%;
-      height: 350px; }
-      .blogposts_container .blog_posts .post_item .blog_content {
-        bottom: 2%;
-        left: 2%;
-        width: 96%; }
-        .blogposts_container .blog_posts .post_item .blog_content h3 {
-          font-size: 1rem; }
-        .blogposts_container .blog_posts .post_item .blog_content p {
-          font-size: .8rem; }
-        .blogposts_container .blog_posts .post_item .blog_content button {
-          font-size: .6rem; }
+  .blogposts_container .blog_posts .post_item {
+    width: 95%;
+    height: 350px; }
+    .blogposts_container .blog_posts .post_item .blog_content {
+      bottom: 2%;
+      left: 2%;
+      width: 96%; }
+      .blogposts_container .blog_posts .post_item .blog_content h3 {
+        font-size: 1rem; }
+      .blogposts_container .blog_posts .post_item .blog_content p {
+        font-size: .8rem; }
+      .blogposts_container .blog_posts .post_item .blog_content button {
+        font-size: .6rem; }
   .contact_container form input {
     width: 75%; }
   .contact_container form textarea {
