--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,13 +1,14 @@
 .hero_container{
     background:$color_heroBackground; 
     z-index: 9;
-    
+
     header{
         padding:15px 12px;
         display:flex;
         justify-content: space-between;
         z-index: 9; 
         align-items: center;
+        position:relative; 
 
         .logo{
             margin:10px 15px; 
